# sel4KanataBench

./: CMakeLists.txt  README.md  easy-settings.cmake  main.c  settings.cmake
